# gfg-rag-middleware

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: gfgv3_dev_middleware.yml
app/: main.py
app/core/: config.py  logging_config.py  mongo.py
app/routers/: embeddings.py  product.py  search.py  webhook.py
app/schemas/: product.py  search.py
app/services/: bm25_service.py  embedding_service.py  product_embedding_service.py  product_service.py  qdrant_service.py  query_analyzer.py  search_service.py  webhook_service.py
